<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Title"
            android:text="@string/product" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="2dp">

            <EditText
                android:id="@+id/pname"
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/pprice"
                style="@style/EditorFieldStyle"
                android:hint="@string/price"
                android:inputType="number" />

            <EditText
                android:id="@+id/pquantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/quantity"
                android:inputType="number" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Title"
            android:text="@string/supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="2dp">

            <EditText
                android:id="@+id/sname"
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/sphonenumber"
                style="@style/EditorFieldStyle"
                android:hint="Phone Number"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/callsupplier"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/call"
                android:focusableInTouchMode="true"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>