<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:text="@string/product_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/price_test"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currency_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/dollar"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stockAvailable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/in_stock"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#AEB6BD" />

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/quantity_test"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#AEB6BD" />

            <TextView
                android:id="@+id/stock_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pcs"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#AEB6BD" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/sell"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@null"
        android:scaleType="fitXY"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/shopping"/>

</LinearLayout>
